--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,31 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Safi Web App</title>
   </head>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/7.11.0/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+      https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="https://www.gstatic.com/firebasejs/7.11.0/firebase-analytics.js"></script>
+
+  <script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+      apiKey: "AIzaSyA9_MSElqRRpXnqAKyVC5dfeVGi2LDskL0",
+      authDomain: "safiwebapp.firebaseapp.com",
+      databaseURL: "https://safiwebapp.firebaseio.com",
+      projectId: "safiwebapp",
+      storageBucket: "safiwebapp.appspot.com",
+      messagingSenderId: "137632814116",
+      appId: "1:137632814116:web:012ef624195614f132f4b1",
+      measurementId: "G-31FD0P8RG0"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+  </script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
