--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Safiwebapp exercise - Machine loading insights"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -26,28 +26,6 @@
     -->
     <title>Safi Web App</title>
   </head>
-  <!-- The core Firebase JS SDK is always required and must be listed first -->
-  <script src="https://www.gstatic.com/firebasejs/7.11.0/firebase-app.js"></script>
-
-  <!-- TODO: Add SDKs for Firebase products that you want to use
-      https://firebase.google.com/docs/web/setup#available-libraries -->
-  <script src="https://www.gstatic.com/firebasejs/7.11.0/firebase-analytics.js"></script>
-
-  <script>
-    // Your web app's Firebase configuration
-    var firebaseConfig = {
-      apiKey: "AIzaSyA9_MSElqRRpXnqAKyVC5dfeVGi2LDskL0",
-      authDomain: "safiwebapp.firebaseapp.com",
-      databaseURL: "https://safiwebapp.firebaseio.com",
-      projectId: "safiwebapp",
-      storageBucket: "safiwebapp.appspot.com",
-      messagingSenderId: "137632814116",
-      appId: "1:137632814116:web:012ef624195614f132f4b1",
-      measurementId: "G-31FD0P8RG0"
-    };
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    firebase.analytics();
   </script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
